<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ xHover
  ~
  ~ Xposed module to customize Paranoid Android's Hover notification experience
  ~
  ~ Copyright (c) 2014 Shubhang Rathore
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- App info -->

    <string name="app_name">xHover</string>
    <string name="app_copyright">
        Copyright © 2014 Shubhang Rathore
        \nGoogle+: http://google.com/+ShubhangRathore
        \nGithub: https://github.com/xenon92
        \nWebsite: http://shubhangrathore.com</string>

    <string name="app_version_text">Version</string>


    <!-- App details -->

    <string name="category_app_details">xHover</string>

    <string name="source">Source</string>
    <string name="source_summary">Go through the source code of the app</string>

    <string name="developer">Developer</string>
    <string name="developer_summary">
        Shubhang Rathore
        \nVisit developer\'s website</string>

    <string name="changelog">Changelog</string>
    <string name="changelog_summary">See the changelog for the app</string>

    <string name="about">About</string>
    <string name="about_summary">Know more about xHover</string>


    <!-- GUI strings -->
    <string name="category_time_delays">time delays</string>
    <string name="category_actions">actions</string>
    <string name="category_behavior">behavior</string>
    <string name="category_layout">layout</string>
    <string name="reset_all">Reset</string>
    <string name="reset_all_summary">Reset all settings to stock Paranoid Android values</string>
    <string name="reset_all_confirmation_message">
        Are you sure you want to reset all settings
        to stock Paranoid Android values?</string>
    <string name="stock_values_restored">Stock values restored</string>
    <string name="apply">Apply</string>
    <string name="apply_summary">
        SystemUI needs to be restarted for changes to take effect
        \nSuperUser permission required</string>
    <string name="test_notification">Test notification</string>
    <string name="test_notification_summary">Send a test notification after 3 seconds</string>
    <string name="notification_xhover">xHover</string>
    <string name="notification_text">This is a test notification from xHover</string>
    <string name="hide_non_clearable">Hide non-clearable</string>
    <string name="hide_non_clearable_summary">
        Prevent non-clearable notification from showing up in Hover</string>
    <string name="hide_low_priority">Hide low-priority</string>
    <string name="hide_low_priority_summary">
        Prevent low-priority notifications from showing up in Hover (such as those from Google Now)</string>
    <string name="custom_colors">Custom colors</string>
    <string name="custom_colors_summary">Customize Hover notifications with custom colors</string>
    <string name="notification_background_color">Background color</string>
    <string name="notification_background_color_summary">Set Hover notification\'s background color</string>
    <string name="notification_title_color">Title color</string>
    <string name="notification_title_color_summary">Set Hover notification\'s title text color</string>
    <string name="notification_text_color">Text color</string>
    <string name="notification_text_color_summary">Set Hover notification\'s text color</string>
    <string name="notification_image_color">Image color</string>
    <string name="notification_image_color_summary">Set Hover notification\'s image color</string>
    <string name="image_background_transparency">Image background</string>
    <string name="image_background_transparency_summary">
        Set Hover notification\'s image background transparency
        \nUse a value between 0 (transparent) and 255 (opaque)</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Hover micro fade out delays -->
    <string name="evade_notification">Evade notification</string>
    <string name="evade_notification_summary">
        Time duration for Hover notification to stay on screen
        after a touch outside the notification view
    </string>

    <string name="micro_fade_out_delay_0_25_seconds">0.25 seconds</string>
    <string name="micro_fade_out_delay_0_75_seconds">0.75 seconds</string>
    <string name="micro_fade_out_delay_1_25_seconds">1.25 seconds</string>
    <string name="micro_fade_out_delay_1_75_seconds">1.75 seconds</string>
    <string name="micro_fade_out_delay_2_25_seconds">2.25 seconds</string>
    <string name="micro_fade_out_delay_2_75_seconds">2.75 seconds</string>



    <!-- Hover short fade out delays -->
    <string name="notification_waiting">Notification waiting</string>
    <string name="notification_waiting_summary">
        Time duration for current Hover notification to stay on screen
        if there is another notification waiting to be shown
    </string>

    <string name="short_fade_out_delay_1_0_second">1 second</string>
    <string name="short_fade_out_delay_1_5_seconds">1.5 seconds</string>
    <string name="short_fade_out_delay_2_0_seconds">2 seconds</string>
    <string name="short_fade_out_delay_2_5_seconds">2.5 seconds</string>
    <string name="short_fade_out_delay_3_0_seconds">3 seconds</string>
    <string name="short_fade_out_delay_3_5_seconds">3.5 seconds</string>
    <string name="short_fade_out_delay_4_0_seconds">4 seconds</string>



    <!-- Hover long fade out delays -->
    <string name="natural_timeout">Natural timeout</string>
    <string name="natural_timeout_summary">
        Time duration for Hover notification to stay on screen
        if there is no interaction with the device</string>

    <string name="long_fade_out_delay_2_seconds">2 seconds</string>
    <string name="long_fade_out_delay_3_seconds">3 seconds</string>
    <string name="long_fade_out_delay_4_seconds">4 seconds</string>
    <string name="long_fade_out_delay_5_seconds">5 seconds</string>
    <string name="long_fade_out_delay_6_seconds">6 seconds</string>
    <string name="long_fade_out_delay_7_seconds">7 seconds</string>
    <string name="long_fade_out_delay_8_seconds">8 seconds</string>
    <string name="long_fade_out_delay_9_seconds">9 seconds</string>
    <string name="long_fade_out_delay_10_seconds">10 seconds</string>


    <!-- Lock screen behavior -->
    <string name="lockscreen_behavior">Lock screen</string>
    <string name="lockscreen_behavior_summary">Show Hover notifications on secure and/or insecure lock screen</string>

    <string name="insecure_only">Insecure</string>
    <string name="insecure_and_secure">Insecure and secure</string>
    <string name="insecure_nor_secure">Neither insecure nor secure</string>

</resources>
